FIX Some tests not run with CTest
FIX Qt UI headers not available in tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,4 +46,6 @@ target_link_libraries(${PROJECT_NAME}
         Qt5::Widgets
         utility_boilerplate_qt5)
 
+# Add tests package.
+include(CTest)
 add_subdirectory(tests)
