--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Idea-related stuff
-.idea
+.idea/*
+# Prevent code style from being ignored.
+# I prefer older style with ampersand and asterisk near variable name.
+!.idea/codeStyles/
 # CMake
 cmake-build-*/
 build
