--- a/utility_boilerplate_qt5/tests/CMakeLists.txt
+++ b/utility_boilerplate_qt5/tests/CMakeLists.txt
@@ -12,6 +12,7 @@ include(${PARENT_SOURCE_DIR}/cmake/gtest.cmake)
 
 # Find tests sources.
 file(GLOB UB_TEST_SOURCES
+        settings/items/*.cpp
         *.cpp
         *.hpp)
 
