--- a/example/tests/CMakeLists.txt
+++ b/example/tests/CMakeLists.txt
@@ -2,9 +2,10 @@
 project(tests)
 
 # Get parent directory and include source of project under test.
-# You probably need to set variable with include directories in top-level project.
 set(PARENT_SOURCE_DIR "")
 get_parent_dir(${PROJECT_SOURCE_DIR} PARENT_SOURCE_DIR)
+include_directories(${PARENT_SOURCE_DIR})
+get_parent_dir(${PARENT_SOURCE_DIR} PARENT_SOURCE_DIR)
 include_directories(${PARENT_SOURCE_DIR})
 
 # Include Google Test.
@@ -13,6 +14,7 @@ include(${PARENT_SOURCE_DIR}/utility_boilerplate_qt5/cmake/gtest.cmake)
 # Include QT UI headers.
 set(PARENT_UIC_DIR "")
 get_parent_dir(${PROJECT_BINARY_DIR} PARENT_UIC_DIR)
+get_parent_dir(${PARENT_UIC_DIR} PARENT_UIC_DIR)
 include_directories(${PARENT_UIC_DIR}/${CMAKE_PROJECT_NAME}_autogen/include)
 
 # Find tests sources.
