--- a/utility_boilerplate_qt5/tests/CMakeLists.txt
+++ b/utility_boilerplate_qt5/tests/CMakeLists.txt
@@ -5,10 +5,9 @@ project(ub_qt5_tests)
 set(PARENT_SOURCE_DIR "")
 get_parent_dir(${PROJECT_SOURCE_DIR} PARENT_SOURCE_DIR)
 include_directories(${PARENT_SOURCE_DIR})
-include_directories(${PARENT_SOURCE_DIR})
 
 # Include Google Test.
-include(${PARENT_SOURCE_DIR}/cmake/gtest.cmake)
+include(../../cmake/gtest.cmake)
 
 # Find tests sources.
 file(GLOB UB_TEST_SOURCES
@@ -23,7 +22,8 @@ target_link_libraries(${PROJECT_NAME}
         utility_boilerplate_qt5)
 target_link_libraries(${PROJECT_NAME}
         gtest
-        gtest_main)
+        gtest_main
+        gcov)
 
 # Make it discoverable for CTest.
 gtest_discover_tests(${PROJECT_NAME})
