--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -14,7 +14,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repository and submodules
+        uses: actions/checkout@v2
+        with:
+          submodules: recursive
+
+      - name: Install project dependencies
+        run: |
+          sudo apt install qt5-default qttools5-dev-tools
 
       - name: Install format dependencies
         run: |
