--- a/src/example/tests/CMakeLists.txt
+++ b/src/example/tests/CMakeLists.txt
@@ -5,15 +5,18 @@ project(tests)
 set(PARENT_SOURCE_DIR "")
 get_parent_dir(${PROJECT_SOURCE_DIR} PARENT_SOURCE_DIR)
 include_directories(${PARENT_SOURCE_DIR})
+message(${PARENT_SOURCE_DIR})
 get_parent_dir(${PARENT_SOURCE_DIR} PARENT_SOURCE_DIR)
 include_directories(${PARENT_SOURCE_DIR})
+message(${PARENT_SOURCE_DIR})
 
 # Include Google Test.
-include(../../cmake/gtest.cmake)
+include(../../../cmake/gtest.cmake)
 
 # Include QT UI headers.
 set(PARENT_UIC_DIR "")
 get_parent_dir(${PROJECT_BINARY_DIR} PARENT_UIC_DIR)
+get_parent_dir(${PARENT_UIC_DIR} PARENT_UIC_DIR)
 get_parent_dir(${PARENT_UIC_DIR} PARENT_UIC_DIR)
 include_directories(${PARENT_UIC_DIR}/${CMAKE_PROJECT_NAME}_autogen/include)
 
