--- a/src/utility_boilerplate_qt5/tests/CMakeLists.txt
+++ b/src/utility_boilerplate_qt5/tests/CMakeLists.txt
@@ -1,11 +1,3 @@
-# Prepare project name.
-project(ub_qt5_tests)
-
-# Get parent directory and include source of project under test.
-set(PARENT_SOURCE_DIR "")
-get_parent_dir(${PROJECT_SOURCE_DIR} PARENT_SOURCE_DIR)
-include_directories(${PARENT_SOURCE_DIR})
-
 # Include Google Test.
 include(../../../cmake/gtest.cmake)
 
@@ -13,11 +5,11 @@ include(../../../cmake/gtest.cmake)
 file(GLOB UB_TEST_SOURCES settings/items/*.cpp *.cpp *.hpp)
 
 # Create tests project and link with libraries.
-add_executable(${PROJECT_NAME} ${UB_TEST_SOURCES})
+add_executable(ub_qt5_tests ${UB_TEST_SOURCES})
 
-target_link_libraries(${PROJECT_NAME} utility_boilerplate_qt5)
+target_link_libraries(ub_qt5_tests utility_boilerplate_qt5)
 
-target_link_libraries(${PROJECT_NAME} gtest gtest_main gcov)
+target_link_libraries(ub_qt5_tests gtest gtest_main gcov)
 
 # Make it discoverable for CTest.
-gtest_discover_tests(${PROJECT_NAME})
+gtest_discover_tests(ub_qt5_tests)
