Trying to cache Qt in workflows

--- a/.github/workflows/ubuntu-build.yml
+++ b/.github/workflows/ubuntu-build.yml
@@ -18,9 +18,20 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Cache Qt
+        id: cache-qt
+        uses: actions/cache@v1
+        with:
+          path: ../Qt
+          key: ${{ runner.os }}-QtCache
+
+      - name: Install Qt
+        uses: jurplel/install-qt-action@v2
+        with:
+          cached: ${{ steps.cache-qt.outputs.cache-hit }}
+
       - name: Install project dependencies
         run: |
-          sudo apt install qt5-default qttools5-dev-tools
 
       - name: Configure
         run: |
