--- a/src/utility_boilerplate_qt5/tests/CMakeLists.txt
+++ b/src/utility_boilerplate_qt5/tests/CMakeLists.txt
@@ -5,7 +5,7 @@ include(../../../cmake/gtest.cmake)
 file(GLOB UB_TEST_SOURCES settings/items/*.cpp *.cpp *.hpp)
 
 # Create tests project and link with libraries.
-add_executable(ub_qt5_tests ${UB_TEST_SOURCES})
+add_executable(ub_qt5_tests ${UTILITY_BOILERPLATE_QT5_SOURCES} ${UB_TEST_SOURCES})
 
 target_link_libraries(ub_qt5_tests utility_boilerplate_qt5)
 
